fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,7 @@ body{
 }
 
 .main-container{
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
 .sidebar{
